// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scope is falsy 1`] = `""`;

exports[`shallow render 1`] = `
<div
  className="flex-100 layout-row layout-align-md-space-between-start layout-align-space-around-start"
>
  <div
    className="margin_box_right margin_bottom
          flex-80 flex-sm-100 flex-xs-100 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start card_padding_right titles_btn"
    >
      <div
        className="flex-100 layout-row layout-align-center-start"
        style={
          Object {
            "minHeight": "560px",
          }
        }
      >
        <div
          className="layout-row flex-100 layout-align-start-center "
        >
          <div
            className="layout-row flex-90 layout-align-start-center layout-wrap"
          />
        </div>
      </div>
      <div
        className="flex-95 layout-row layout-align-center-center margin_bottom"
      >
        <div
          className="
                      flex-15 layout-row layout-align-center-center pointy
                      navigation_button disabled
                    "
          onClick={null}
        >
          <i
            className="fa fa-chevron-left"
          />
          <p>
                
            Back
          </p>
        </div>
        <p>
          1
        </p>
        <div
          className="
                      flex-15 layout-row layout-align-center-center pointy
                      navigation_button disabled
                    "
          onClick={null}
        >
          <p>
            Next
                
          </p>
          <i
            className="fa fa-chevron-right"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex-20 layout-row layout-align-end-end"
  >
    <div
      className="hide-sm hide-xs layout-row layout-wrap  flex-100"
    >
      <PricingSearchBar
        onChange={[Function]}
        t={[Function]}
        target="ocean"
        value=""
      />
      <SideOptionsBox
        content={
          <div
            className="flex-100 layout-row layout-wrap layout-align-center-start"
          >
            <CollapsingBar
              collapsed={true}
              content={
                <div
                  className="open_filter flex-100 layout-row layout-wrap layout-align-center-start"
                >
                  <div
                    className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                  >
                    <p
                      className="flex-100"
                    >
                      Upload {{mot}} {{loadType}} Pricings Sheet
                    </p>
                    <FileUploader
                      dispatchFn={[Function]}
                      formClasses=""
                      size="full"
                      square={false}
                      t={[Function]}
                      text="Dedicated Pricings .xlsx"
                      theme={
                        Object {
                          "colors": Object {
                            "primary": "#333",
                            "secondary": "#fafafa",
                          },
                        }
                      }
                      tooltip="By using the Excel template you can update all your LCL rates with one upload"
                      type="xlsx"
                      uploadFn={null}
                    />
                  </div>
                  <div
                    className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                  >
                    <p
                      className="flex-100"
                    >
                      Upload {{mot}} {{loadType}} Pricings Sheet
                    </p>
                    <FileUploader
                      dispatchFn={[Function]}
                      formClasses=""
                      size="full"
                      square={false}
                      t={[Function]}
                      text="Dedicated Pricings .xlsx"
                      theme={
                        Object {
                          "colors": Object {
                            "primary": "#333",
                            "secondary": "#fafafa",
                          },
                        }
                      }
                      tooltip="By using the Excel template you can update all your LCL rates with one upload"
                      type="xlsx"
                      uploadFn={null}
                    />
                  </div>
                </div>
              }
              contentHeader=""
              faClass="fa fa-cloud-upload"
              handleCollapser={[Function]}
              headerWrapClasses=""
              mainWrapperStyle={Object {}}
              minHeight=""
              parentClass=""
              showArrow={true}
              startCollapsed={false}
              styleHeader={
                Object {
                  "background": "#E0E0E0",
                  "color": "#4F4F4F",
                }
              }
              text="Upload Data"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
            <CollapsingBar
              collapsed={true}
              content={
                <div
                  className="open_filter flex-100 layout-row layout-wrap layout-align-center-start"
                >
                  <div
                    className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                  >
                    <p
                      className="flex-100"
                    >
                      Download {{mot}} {{loadType}} Pricings Sheet
                    </p>
                    <Connect(DocumentsDownloader)
                      options={
                        Object {
                          "load_type": "cargo_item",
                          "mot": "ocean",
                        }
                      }
                      size="full"
                      t={[Function]}
                      target="pricing_cargo_item"
                      theme={
                        Object {
                          "colors": Object {
                            "primary": "#333",
                            "secondary": "#fafafa",
                          },
                        }
                      }
                    />
                  </div>
                  <div
                    className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                  >
                    <p
                      className="flex-100"
                    >
                      Download {{mot}} {{loadType}} Pricings Sheet
                    </p>
                    <Connect(DocumentsDownloader)
                      options={
                        Object {
                          "load_type": "container",
                          "mot": "ocean",
                        }
                      }
                      size="full"
                      t={[Function]}
                      target="pricing_container"
                      theme={
                        Object {
                          "colors": Object {
                            "primary": "#333",
                            "secondary": "#fafafa",
                          },
                        }
                      }
                    />
                  </div>
                </div>
              }
              contentHeader=""
              faClass="fa fa-cloud-download"
              handleCollapser={[Function]}
              headerWrapClasses=""
              mainWrapperStyle={Object {}}
              minHeight=""
              parentClass=""
              showArrow={true}
              startCollapsed={false}
              styleHeader={
                Object {
                  "background": "#E0E0E0",
                  "color": "#4F4F4F",
                }
              }
              text="Download Data"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
            <CollapsingBar
              collapsed={true}
              content={
                <div
                  className="action_section flex-100 layout-row layout-align-center-center layout-wrap"
                >
                  <div
                    className="flex-none layout-row"
                  >
                    <RoundButton
                      active={true}
                      back={false}
                      classNames=""
                      disabled={false}
                      flexContainer="100"
                      handleDisabled={null}
                      handleNext={[Function]}
                      icon=""
                      iconClass="fa-plus"
                      inverse={false}
                      size="small"
                      text="New"
                      theme={
                        Object {
                          "colors": Object {
                            "primary": "#333",
                            "secondary": "#fafafa",
                          },
                        }
                      }
                    />
                  </div>
                </div>
              }
              contentHeader=""
              faClass="fa fa-plus-circle"
              handleCollapser={[Function]}
              headerWrapClasses=""
              mainWrapperStyle={Object {}}
              minHeight=""
              parentClass=""
              showArrow={true}
              startCollapsed={false}
              styleHeader={
                Object {
                  "background": "#E0E0E0",
                  "color": "#4F4F4F",
                }
              }
              text="Create New Pricing"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        }
        flexOptions="flex-100"
        header="Data manager"
      />
    </div>
  </div>
</div>
`;

exports[`state.page > 1 1`] = `
<div
  className="flex-100 layout-row layout-align-md-space-between-start layout-align-space-around-start"
>
  <div
    className="margin_box_right margin_bottom
          flex-80 flex-sm-100 flex-xs-100 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start card_padding_right titles_btn"
    >
      <div
        className="flex-100 layout-row layout-align-center-start"
        style={
          Object {
            "minHeight": "560px",
          }
        }
      >
        <div
          className="layout-row flex-100 layout-align-start-center "
        >
          <div
            className="layout-row flex-90 layout-align-start-center layout-wrap"
          />
        </div>
      </div>
      <div
        className="flex-95 layout-row layout-align-center-center margin_bottom"
      >
        <div
          className="
                      flex-15 layout-row layout-align-center-center pointy
                      navigation_button 
                    "
          onClick={[Function]}
        >
          <i
            className="fa fa-chevron-left"
          />
          <p>
                
            Back
          </p>
        </div>
        <p>
          2
        </p>
        <div
          className="
                      flex-15 layout-row layout-align-center-center pointy
                      navigation_button disabled
                    "
          onClick={null}
        >
          <p>
            Next
                
          </p>
          <i
            className="fa fa-chevron-right"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex-20 layout-row layout-align-end-end"
  >
    <div
      className="hide-sm hide-xs layout-row layout-wrap  flex-100"
    >
      <PricingSearchBar
        onChange={[Function]}
        t={[Function]}
        target="ocean"
        value=""
      />
      <SideOptionsBox
        content={
          <div
            className="flex-100 layout-row layout-wrap layout-align-center-start"
          >
            <CollapsingBar
              collapsed={true}
              content={
                <div
                  className="open_filter flex-100 layout-row layout-wrap layout-align-center-start"
                >
                  <div
                    className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                  >
                    <p
                      className="flex-100"
                    >
                      Upload {{mot}} {{loadType}} Pricings Sheet
                    </p>
                    <FileUploader
                      dispatchFn={[Function]}
                      formClasses=""
                      size="full"
                      square={false}
                      t={[Function]}
                      text="Dedicated Pricings .xlsx"
                      theme={
                        Object {
                          "colors": Object {
                            "primary": "#333",
                            "secondary": "#fafafa",
                          },
                        }
                      }
                      tooltip="By using the Excel template you can update all your LCL rates with one upload"
                      type="xlsx"
                      uploadFn={null}
                    />
                  </div>
                  <div
                    className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                  >
                    <p
                      className="flex-100"
                    >
                      Upload {{mot}} {{loadType}} Pricings Sheet
                    </p>
                    <FileUploader
                      dispatchFn={[Function]}
                      formClasses=""
                      size="full"
                      square={false}
                      t={[Function]}
                      text="Dedicated Pricings .xlsx"
                      theme={
                        Object {
                          "colors": Object {
                            "primary": "#333",
                            "secondary": "#fafafa",
                          },
                        }
                      }
                      tooltip="By using the Excel template you can update all your LCL rates with one upload"
                      type="xlsx"
                      uploadFn={null}
                    />
                  </div>
                </div>
              }
              contentHeader=""
              faClass="fa fa-cloud-upload"
              handleCollapser={[Function]}
              headerWrapClasses=""
              mainWrapperStyle={Object {}}
              minHeight=""
              parentClass=""
              showArrow={true}
              startCollapsed={false}
              styleHeader={
                Object {
                  "background": "#E0E0E0",
                  "color": "#4F4F4F",
                }
              }
              text="Upload Data"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
            <CollapsingBar
              collapsed={true}
              content={
                <div
                  className="open_filter flex-100 layout-row layout-wrap layout-align-center-start"
                >
                  <div
                    className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                  >
                    <p
                      className="flex-100"
                    >
                      Download {{mot}} {{loadType}} Pricings Sheet
                    </p>
                    <Connect(DocumentsDownloader)
                      options={
                        Object {
                          "load_type": "cargo_item",
                          "mot": "ocean",
                        }
                      }
                      size="full"
                      t={[Function]}
                      target="pricing_cargo_item"
                      theme={
                        Object {
                          "colors": Object {
                            "primary": "#333",
                            "secondary": "#fafafa",
                          },
                        }
                      }
                    />
                  </div>
                  <div
                    className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                  >
                    <p
                      className="flex-100"
                    >
                      Download {{mot}} {{loadType}} Pricings Sheet
                    </p>
                    <Connect(DocumentsDownloader)
                      options={
                        Object {
                          "load_type": "container",
                          "mot": "ocean",
                        }
                      }
                      size="full"
                      t={[Function]}
                      target="pricing_container"
                      theme={
                        Object {
                          "colors": Object {
                            "primary": "#333",
                            "secondary": "#fafafa",
                          },
                        }
                      }
                    />
                  </div>
                </div>
              }
              contentHeader=""
              faClass="fa fa-cloud-download"
              handleCollapser={[Function]}
              headerWrapClasses=""
              mainWrapperStyle={Object {}}
              minHeight=""
              parentClass=""
              showArrow={true}
              startCollapsed={false}
              styleHeader={
                Object {
                  "background": "#E0E0E0",
                  "color": "#4F4F4F",
                }
              }
              text="Download Data"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
            <CollapsingBar
              collapsed={true}
              content={
                <div
                  className="action_section flex-100 layout-row layout-align-center-center layout-wrap"
                >
                  <div
                    className="flex-none layout-row"
                  >
                    <RoundButton
                      active={true}
                      back={false}
                      classNames=""
                      disabled={false}
                      flexContainer="100"
                      handleDisabled={null}
                      handleNext={[Function]}
                      icon=""
                      iconClass="fa-plus"
                      inverse={false}
                      size="small"
                      text="New"
                      theme={
                        Object {
                          "colors": Object {
                            "primary": "#333",
                            "secondary": "#fafafa",
                          },
                        }
                      }
                    />
                  </div>
                </div>
              }
              contentHeader=""
              faClass="fa fa-plus-circle"
              handleCollapser={[Function]}
              headerWrapClasses=""
              mainWrapperStyle={Object {}}
              minHeight=""
              parentClass=""
              showArrow={true}
              startCollapsed={false}
              styleHeader={
                Object {
                  "background": "#E0E0E0",
                  "color": "#4F4F4F",
                }
              }
              text="Create New Pricing"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        }
        flexOptions="flex-100"
        header="Data manager"
      />
    </div>
  </div>
</div>
`;

exports[`user is internal 1`] = `
<div
  className="flex-100 layout-row layout-align-md-space-between-start layout-align-space-around-start"
>
  <div
    className="margin_box_right margin_bottom
          flex-80 flex-sm-100 flex-xs-100 layout-row layout-wrap layout-align-start-start"
  >
    <div
      className="flex-100 layout-row layout-wrap layout-align-center-start card_padding_right titles_btn"
    >
      <div
        className="flex-100 layout-row layout-align-center-start"
        style={
          Object {
            "minHeight": "560px",
          }
        }
      >
        <div
          className="layout-row flex-100 layout-align-start-center "
        >
          <div
            className="layout-row flex-90 layout-align-start-center layout-wrap"
          />
        </div>
      </div>
      <div
        className="flex-95 layout-row layout-align-center-center margin_bottom"
      >
        <div
          className="
                      flex-15 layout-row layout-align-center-center pointy
                      navigation_button disabled
                    "
          onClick={null}
        >
          <i
            className="fa fa-chevron-left"
          />
          <p>
                
            Back
          </p>
        </div>
        <p>
          1
        </p>
        <div
          className="
                      flex-15 layout-row layout-align-center-center pointy
                      navigation_button disabled
                    "
          onClick={null}
        >
          <p>
            Next
                
          </p>
          <i
            className="fa fa-chevron-right"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex-20 layout-row layout-align-end-end"
  >
    <div
      className="hide-sm hide-xs layout-row layout-wrap  flex-100"
    >
      <PricingSearchBar
        onChange={[Function]}
        t={[Function]}
        target="ocean"
        value=""
      />
      <SideOptionsBox
        content={
          <div
            className="flex-100 layout-row layout-wrap layout-align-center-start"
          >
            <CollapsingBar
              collapsed={true}
              content={
                <div
                  className="open_filter flex-100 layout-row layout-wrap layout-align-center-start"
                >
                  <div
                    className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                  >
                    <p
                      className="flex-100"
                    >
                      Upload {{mot}} {{loadType}} Pricings Sheet
                    </p>
                    <FileUploader
                      dispatchFn={[Function]}
                      formClasses=""
                      size="full"
                      square={false}
                      t={[Function]}
                      text="Dedicated Pricings .xlsx"
                      theme={
                        Object {
                          "colors": Object {
                            "primary": "#333",
                            "secondary": "#fafafa",
                          },
                        }
                      }
                      tooltip="By using the Excel template you can update all your LCL rates with one upload"
                      type="xlsx"
                      uploadFn={null}
                    />
                  </div>
                  <div
                    className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                  >
                    <p
                      className="flex-100"
                    >
                      Upload {{mot}} {{loadType}} Pricings Sheet
                    </p>
                    <FileUploader
                      dispatchFn={[Function]}
                      formClasses=""
                      size="full"
                      square={false}
                      t={[Function]}
                      text="Dedicated Pricings .xlsx"
                      theme={
                        Object {
                          "colors": Object {
                            "primary": "#333",
                            "secondary": "#fafafa",
                          },
                        }
                      }
                      tooltip="By using the Excel template you can update all your LCL rates with one upload"
                      type="xlsx"
                      uploadFn={null}
                    />
                  </div>
                </div>
              }
              contentHeader=""
              faClass="fa fa-cloud-upload"
              handleCollapser={[Function]}
              headerWrapClasses=""
              mainWrapperStyle={Object {}}
              minHeight=""
              parentClass=""
              showArrow={true}
              startCollapsed={false}
              styleHeader={
                Object {
                  "background": "#E0E0E0",
                  "color": "#4F4F4F",
                }
              }
              text="Upload Data"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
            <CollapsingBar
              collapsed={true}
              content={
                <div
                  className="open_filter flex-100 layout-row layout-wrap layout-align-center-start"
                >
                  <div
                    className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                  >
                    <p
                      className="flex-100"
                    >
                      Download {{mot}} {{loadType}} Pricings Sheet
                    </p>
                    <Connect(DocumentsDownloader)
                      options={
                        Object {
                          "load_type": "cargo_item",
                          "mot": "ocean",
                        }
                      }
                      size="full"
                      t={[Function]}
                      target="pricing_cargo_item"
                      theme={
                        Object {
                          "colors": Object {
                            "primary": "#333",
                            "secondary": "#fafafa",
                          },
                        }
                      }
                    />
                  </div>
                  <div
                    className="action_section flex-100 layout-row layout-wrap layout-align-center-center"
                  >
                    <p
                      className="flex-100"
                    >
                      Download {{mot}} {{loadType}} Pricings Sheet
                    </p>
                    <Connect(DocumentsDownloader)
                      options={
                        Object {
                          "load_type": "container",
                          "mot": "ocean",
                        }
                      }
                      size="full"
                      t={[Function]}
                      target="pricing_container"
                      theme={
                        Object {
                          "colors": Object {
                            "primary": "#333",
                            "secondary": "#fafafa",
                          },
                        }
                      }
                    />
                  </div>
                </div>
              }
              contentHeader=""
              faClass="fa fa-cloud-download"
              handleCollapser={[Function]}
              headerWrapClasses=""
              mainWrapperStyle={Object {}}
              minHeight=""
              parentClass=""
              showArrow={true}
              startCollapsed={false}
              styleHeader={
                Object {
                  "background": "#E0E0E0",
                  "color": "#4F4F4F",
                }
              }
              text="Download Data"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
            <CollapsingBar
              collapsed={true}
              content={
                <div
                  className="action_section flex-100 layout-row layout-align-center-center layout-wrap"
                >
                  <div
                    className="flex-none layout-row"
                  >
                    <RoundButton
                      active={true}
                      back={false}
                      classNames=""
                      disabled={false}
                      flexContainer="100"
                      handleDisabled={null}
                      handleNext={[Function]}
                      icon=""
                      iconClass="fa-plus"
                      inverse={false}
                      size="small"
                      text="New"
                      theme={
                        Object {
                          "colors": Object {
                            "primary": "#333",
                            "secondary": "#fafafa",
                          },
                        }
                      }
                    />
                  </div>
                </div>
              }
              contentHeader=""
              faClass="fa fa-plus-circle"
              handleCollapser={[Function]}
              headerWrapClasses=""
              mainWrapperStyle={Object {}}
              minHeight=""
              parentClass=""
              showArrow={true}
              startCollapsed={false}
              styleHeader={
                Object {
                  "background": "#E0E0E0",
                  "color": "#4F4F4F",
                }
              }
              text="Create New Pricing"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        }
        flexOptions="flex-100"
        header="Data manager"
      />
    </div>
  </div>
</div>
`;
